Fixed some Layout issues

--- a/web/themes/kustomcruise/css/friend.css
+++ b/web/themes/kustomcruise/css/friend.css
@@ -8,3 +8,14 @@ ul.friends_list li{
 	font-weight: bold;
 	padding: 5px ;
 }
+ul.request_list, ul.latestuser_list, ul.searchuser_list {
+	list-style: none;
+	margin: 0;	
+	padding: 0;	
+}
+ul.request_list li, ul.latestuser_list li, ul.searchuser_list li {
+	background-color: #F2F2F2;
+	border-top: 1px solid #2E6AC4;	
+	font-size: 0.8em;
+	padding: 5px ;
+}
