--- a/web/themes/kustomcruise/css_compressed.css
+++ b/web/themes/kustomcruise/css_compressed.css
@@ -225,13 +225,22 @@ div.form-comment textarea{
 ul.friends_list {
 	list-style: none;
 	margin: 0;	
-	padding: 0;
 }
 ul.friends_list li{
 	background-color: #F2F2F2;
 	border-top: 1px solid #2E6AC4;	
-	font-size: 0.9em;
 	font-weight: bold;
+	padding: 5px ;
+}
+ul.request_list, ul.latestuser_list, ul.searchuser_list {
+	list-style: none;
+	margin: 0;	
+	padding: 0;	
+}
+ul.request_list li, ul.latestuser_list li, ul.searchuser_list li {
+	background-color: #F2F2F2;
+	border-top: 1px solid #2E6AC4;	
+	font-size: 0.8em;
 	padding: 5px ;
 }
 
